TFC-96 Fixes. 1. Add an indicator to Flexible shifts on the find opportunities page to show that they are flexible 2. Client-side form validation to the "Define volunteer opportunities" interface that will prevent saving to the database and inform the user if not all fields are entered to define a schedule. 3. UI changes Define Volunteer Opportunities pop-up.

--- a/ang/volunteer.css
+++ b/ang/volunteer.css
@@ -157,3 +157,13 @@ span.crm-button-text {
 #crm-vol-form-textarea-wrapper {
   clear: left;
 }
+
+.crm-vol-hint {
+  font-style: italic;
+  font-size: 11px;
+}
+
+.crm-vol-define-flexible-needs {
+  padding-bottom: 10px;
+  padding-top: 5px;
+}
